tdf#101122 DOCX custom shape export: remove bad fill

of (simplified export) of not filled custom shapes by
adding missing fill="none" to a:path.

Note: in OpenDocument, unfilled shape path is defined
by draw:enhanced-path command "F", see section 19.145
in ODF v1.2.

Co-authored-by: Szabolcs Tóth

Change-Id: I0be2aada3deb06828216e0441c91c389a673f87c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104205
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>